force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/NEILON__File_Explorer_Page_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>File Explorer Page configuration.</description>
    <label>File Explorer Page Configuration</label>
</CustomObject>