force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Breadcrumb_Size__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Breadcrumb_Size__c</fullName>
    <description>Maximum number of records to display in navigation bar at the top.</description>
    <inlineHelpText>Maximum number of records to display in navigation bar at the top.</inlineHelpText>
    <label>Breadcrumb Size</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>