force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Card_View__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Card_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, file and folder details will be displayed in card view.</description>
    <inlineHelpText>If checked, file and folder details will be displayed in card view.</inlineHelpText>
    <label>Card View?</label>
    <type>Checkbox</type>
</CustomField>