force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Custom_Folder_Structure_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Custom_Folder_Structure_Class_Name__c</fullName>
    <description>Name of the class to be invoked when creating folder structure for Salesforce records through File Explorer page</description>
    <inlineHelpText>Name of the class to be invoked when creating folder structure for Salesforce records through File Explorer page</inlineHelpText>
    <label>Custom Folder Structure Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>