force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Document_Actions__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Document_Actions__c</fullName>
    <description>Document actions which needs to be displayed on page.</description>
    <inlineHelpText>Document actions which needs to be displayed on page.</inlineHelpText>
    <label>Document Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>