force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Enable_Search__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Enable_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, Seach functionality will be enabled.</description>
    <inlineHelpText>If true, Seach functionality will be enabled.</inlineHelpText>
    <label>Enable Search</label>
    <type>Checkbox</type>
</CustomField>