force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Enable_Strict_Folder_Access__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Enable_Strict_Folder_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, upload files and create folders will be enabled only if the user has edit access to the selected folder.</description>
    <inlineHelpText>If true, upload files and create folders will be enabled only if the user has edit access to the selected folder.</inlineHelpText>
    <label>Enable Strict Folder Access</label>
    <type>Checkbox</type>
</CustomField>