force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__File_Detail_Fields__c.field-meta.xml
<CustomField>
    <fullName>NEILON__File_Detail_Fields__c</fullName>
    <description>File fields needs to be displayed on page.</description>
    <inlineHelpText>File fields needs to be displayed on page.</inlineHelpText>
    <label>File Detail Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>