force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Frame_Height__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Frame_Height__c</fullName>
    <description>Height of full File Explorer section.</description>
    <inlineHelpText>Height of full File Explorer section.</inlineHelpText>
    <label>Frame Height(pixel)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>