force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Home_Folder__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Home_Folder__c</fullName>
    <description>Landing folder for explorer. If empty default home folder will be used.</description>
    <inlineHelpText>Landing folder for explorer. If empty default home folder will be used.</inlineHelpText>
    <label>Home Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>