force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Is_Allow_Folder_Creation__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Is_Allow_Folder_Creation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, users can create folders.</description>
    <inlineHelpText>If checked, users can create folders.</inlineHelpText>
    <label>Enable Folder Creation</label>
    <type>Checkbox</type>
</CustomField>