force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Mass_Actions__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Mass_Actions__c</fullName>
    <description>Mass actions which needs to be displayed on page.</description>
    <inlineHelpText>Mass actions which needs to be displayed on page.</inlineHelpText>
    <label>Mass Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>