force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Max_Sub_Folders_Files_Count__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Max_Sub_Folders_Files_Count__c</fullName>
    <description>Maximum count for sub folders / files as folder information.</description>
    <inlineHelpText>Maximum count for sub folders / files as folder information. Set it to 0, if you don&apos;t want to display count.</inlineHelpText>
    <label>Max Sub folders / files Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>