force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Show_Breadcrumb__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Show_Breadcrumb__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, breadcrumb will be displayed.</description>
    <inlineHelpText>If checked, breadcrumb  will be displayed.</inlineHelpText>
    <label>Show Breadcrumb</label>
    <type>Checkbox</type>
</CustomField>