force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Show_Files_Folders_Count__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Show_Files_Folders_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, count of sub folders and files under each folder will be displayed in S3-File Explorer</description>
    <inlineHelpText>If checked, count of sub folders and files under each folder will be displayed in S3-File Explorer</inlineHelpText>
    <label>Show Files &amp; Folder Count</label>
    <type>Checkbox</type>
</CustomField>