force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Show_Files_In_Tree__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Show_Files_In_Tree__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show / hide files in the tree.</description>
    <inlineHelpText>If checked, show files in the tree.</inlineHelpText>
    <label>Show Files in Tree</label>
    <type>Checkbox</type>
</CustomField>