force-app/main/default/objects/NEILON__File_Explorer_Page_Configuration__c/fields/NEILON__Show_Related_Files_Folders__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Show_Related_Files_Folders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show files and folders related to any record.</description>
    <inlineHelpText>If checked, files and folders related to any record of any object will also be displayed in the file system.</inlineHelpText>
    <label>Show related files / folders</label>
    <type>Checkbox</type>
</CustomField>